--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "all": "^0.0.0",
+    "chart.js": "^4.4.9",
+    "file-saver": "^2.0.5",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
